<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkboxPref"
            android:summary="@string/inc_pref"
            android:title="@string/pref_inc" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/themes">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="Theme1"
            android:summary="@string/green_sum"
            android:title="@string/green_theme" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="Theme2"
            android:summary="@string/brown_sum"
            android:title="@string/brown_theme" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="Theme3"
            android:summary="@string/red_sum"
            android:title="@string/red_theme" />
    </PreferenceCategory>
</PreferenceScreen>