<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:padding="18dp"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/button_all"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/cocktail_all"
            android:padding="18dp"
            android:text="@string/all" />

        <Button
            android:id="@+id/button_favorites"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/cocktail_fav"
            android:padding="18dp"
            android:text="@string/favorites" />

        <Button
            android:id="@+id/button_random"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/cocktail_rand"
            android:padding="18dp"
            android:text="@string/random_cocktail" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/cocktail_sett"
            android:padding="18dp"
            android:text="@string/settings" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/cocktail_ex"
            android:padding="18dp"
            android:text="@string/exit" />

    </LinearLayout>
</ScrollView>